@@ -1,10 +1,11 @@
 package com.javawiz.stream.collect;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class ConcatenateStringExample {
     public static void main(String[] args) {
-        List<String> vowels = List.of("a", "e", "i", "o", "u");
+        List<String> vowels = Arrays.asList("a", "e", "i", "o", "u");
         // sequential stream - nothing to combine
         StringBuilder result = vowels.stream().collect(StringBuilder::new, StringBuilder::append,
                 (a, b) -> a.append(",").append(b));
